<resources>
    <string name="app_name">Weanow App</string>
    <string name="find_your_city">find_your_city</string>
    <string name="tv_content_profile">
        \nAbout Weanow: Your Weather Companion\nWelcome to Weanow, your trusted companion in navigating the ever-changing weather. Weanow is not just a weather app; it\'s your personal meteorological advisor, crafted to simplify your daily decisions and ensure youre prepared for whatever the elements may bring.\n
        \nOur Mission: Empowering Your Day
        \nAt Weanow, our mission is simple – to empower you with accurate and reliable weather information so you can make informed decisions.\n
        \nWe understand that weather conditions impact various aspects of your life, from planning outdoor activities to ensuring a smooth commute. That\'s why weve designed Weanow to be more than just a forecast; its your weather ally, always by your side.\n
        \nKey Features:
        \n\u2022Real-Time Updates: Weanow provides up-to-the-minute weather updates, ensuring you are never caught off guard by sudden changes.
        \n\u2022Customized Forecasts: Tailor your experience with personalized weather forecasts based on your location and preferences.
        \n\u2022Intuitive Design: Our user-friendly interface makes it easy to access the information you need, when you need it.
        \n\u2022Severe Weather Alerts: Stay informed about severe weather conditions with timely alerts, helping you stay safe and prepared.\n
        \nWhy Weanow?
        \n\u2022Accuracy: Our forecasts are powered by cutting-edge meteorological technology, providing you with the most accurate predictions.
        \n\u2022Reliability: Count on Weanow for dependable weather information, no matter where you are.
        \n\u2022Innovation: We are committed to staying ahead of the curve, continually enhancing Weanow to meet your evolving needs.\n
        \nConnect with Us:
        \nHave questions, suggestions, or just want to say hello? We\'d love to hear from you! Connect with us on social media or drop us an email. Your feedback helps us improve and tailor Weanow to be the best weather app for you.
        \nThank you for choosing Weanow as your weather companion. Here\'s to weathering every day with confidence!\n
    </string>
    <string name="content_image_logo">Content Image Logo</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="clas">class</string>
    <string name="see_profile">See Profile</string>
    <string name="discover_applen">Discover Applen</string>
    <string name="trailblazers">Trailblazers</string>
    <string name="inside_weanow">Inside Weanow</string>
    <string name="meet_our_team">Meet Our Team</string>
    <string name="getting_weather">getting_weather</string>
    <string name="sea">SEA</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">wind Speed</string>
    <string name="conditions">Conditions</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="min">Min:</string>
    <string name="max">Max:</string>

    <string-array name="data_name">
        <item>Amelia Cahyani</item>
        <item>Hanun Hafidzoh</item>
        <item>Syahida Nur Hilma Adilah</item>
        <item>Zaskia Zun Nurain</item>
    </string-array>
</resources>