<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileActivity"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/content_image_logo"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_img_detail"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:elevation="50dp"
        android:orientation="horizontal"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintStart_toStartOf="@id/img_logo">

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="100dp"
            android:paddingVertical="5dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/arial_bold"/>

        <ScrollView
            android:id="@+id/sv_content"
            android:layout_width="310dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/tv_detail_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:justificationMode="inter_word"
                android:paddingHorizontal="20dp"
                android:paddingVertical="5dp"
                android:text="@string/tv_content_profile"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:fontFamily="@font/arial_bold"/>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>