<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_hero"
    android:layout_width="280dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_student"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            card_view:shapeAppearanceOverlay="@style/RoundedSquare"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/iv_student"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/iv_student"
            card_view:layout_constraintTop_toTopOf="@id/iv_student" />

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/clas"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_student"
            card_view:layout_constraintEnd_toEndOf="@id/tv_name"
            card_view:layout_constraintStart_toStartOf="@id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_name"
            card_view:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            card_view:layout_constraintEnd_toEndOf="@id/tv_class"
            card_view:layout_constraintStart_toStartOf="@id/tv_class"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_class" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>